<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:parentTag="android.widget.LinearLayout"
    tools:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.ping.android.presentation.view.custom.SettingItem
        style="@style/ItemSetting"
        app:leftIcon="@drawable/ic_conversation_notification"
        app:leftIconTint="?colorAccent"
        app:title="@string/conversation_detail_notifications">

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/user_profile_notification"
            style="@style/ItemSettingIconRight.Toggle" />
    </com.ping.android.presentation.view.custom.SettingItem>

    <com.ping.android.presentation.view.custom.SettingItem
        style="@style/ItemSetting"
        app:leftIcon="@drawable/ic_conversation_mask_message"
        app:leftIconTint="?colorAccent"
        app:title="@string/conversation_detail_mask_message">

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/user_profile_mask"
            style="@style/ItemSettingIconRight.Toggle" />
    </com.ping.android.presentation.view.custom.SettingItem>

    <com.ping.android.presentation.view.custom.SettingItem
        style="@style/ItemSetting"
        app:leftIcon="@drawable/ic_conversation_mask_image"
        app:leftIconTint="?colorAccent"
        app:showDivider="false"
        app:title="@string/conversation_detail_puzzule_image">

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/user_profile_puzzle"
            style="@style/ItemSettingIconRight.Toggle" />
    </com.ping.android.presentation.view.custom.SettingItem>

    <com.ping.android.presentation.view.custom.SettingItem
        android:id="@+id/profile_nickname"
        style="@style/ItemSetting"
        android:layout_marginTop="30dp"
        app:leftIconTint="?colorAccent"
        app:leftIcon="@drawable/ic_conversation_nickname"
        app:title="@string/conversation_detail_nickname">

        <ImageView
            style="@style/ItemSettingIconRight" />
    </com.ping.android.presentation.view.custom.SettingItem>

    <com.ping.android.presentation.view.custom.SettingItem
        android:id="@+id/group_profile_color"
        style="@style/ItemSetting"
        app:leftIconTint="?colorAccent"
        app:leftIcon="@drawable/ic_conversation_color_lens"
        app:title="@string/conversation_detail_colors">

        <ImageView
            style="@style/ItemSettingIconRight" />
    </com.ping.android.presentation.view.custom.SettingItem>

    <com.ping.android.presentation.view.custom.SettingItem
        android:id="@+id/profile_background"
        style="@style/ItemSetting"
        app:leftIconTint="?colorAccent"
        app:leftIcon="@drawable/ic_conversation_background"
        app:title="@string/conversation_detail_background">

        <ImageView
            style="@style/ItemSettingIconRight" />
    </com.ping.android.presentation.view.custom.SettingItem>

    <com.ping.android.presentation.view.custom.SettingItem
        android:id="@+id/profile_gallery"
        style="@style/ItemSetting"
        app:leftIconTint="?colorAccent"
        app:leftIcon="@drawable/ic_conversation_media"
        app:showDivider="false"
        app:title="@string/conversation_detail_media">

        <ImageView
            style="@style/ItemSettingIconRight" />
    </com.ping.android.presentation.view.custom.SettingItem>
</merge>