<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/contentRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background_gray"
    android:orientation="vertical">

    <RelativeLayout style="@style/TopMenu">

        <ImageView
            android:id="@+id/iv_back"
            style="@style/BackButton" />

        <TextView
            style="@style/TextTitle"
            android:text="TRANSPHABET" />

    </RelativeLayout>

    <View style="@style/ViewSeparate" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/default_header_space"
        android:paddingStart="@dimen/default_padding"
        android:paddingEnd="@dimen/default_padding">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textSize="14sp"
            android:text="CHOOSE A SETTING" />
    </LinearLayout>

    <com.ping.android.presentation.view.custom.SettingItem
        android:id="@+id/v_generate_random"
        style="@style/ItemSetting"
        app:title="@string/generate_random">

        <ImageView
            style="@style/ItemSettingIconRight"/>
    </com.ping.android.presentation.view.custom.SettingItem>

    <com.ping.android.presentation.view.custom.SettingItem
        android:id="@+id/v_selective_languages"
        style="@style/ItemSetting"
        app:title="@string/setting_selective_languages">

        <ImageView
            style="@style/ItemSettingIconRight"/>
    </com.ping.android.presentation.view.custom.SettingItem>

    <com.ping.android.presentation.view.custom.SettingItem
        android:id="@+id/v_selective_emojis"
        style="@style/ItemSetting"
        app:title="@string/setting_selective_emojis"
        app:showDivider="false">

        <ImageView
            style="@style/ItemSettingIconRight"/>
    </com.ping.android.presentation.view.custom.SettingItem>

    <com.ping.android.presentation.view.custom.SettingItem
        android:id="@+id/v_manual_setup"
        style="@style/ItemSetting"
        android:layout_marginTop="@dimen/default_header_space"
        app:title="@string/setting_manual_set_up"
        app:showDivider="false">

        <ImageView
            style="@style/ItemSettingIconRight"/>
    </com.ping.android.presentation.view.custom.SettingItem>

</LinearLayout>