<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background_gray"
    android:clickable="true"
    android:focusable="true"
    android:orientation="vertical">

    <RelativeLayout
        style="?attr/backgroundTheme"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@drawable/bg_bottom_gray"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/user_profile_back"
            style="@style/BackButton" />

        <TextView
            style="@style/TextTitle"
            android:text="DETAILS" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            style="@style/MatchParent"
            android:orientation="vertical">

            <View style="@style/ItemViewSeparate" />

            <LinearLayout
                style="@style/ItemSetting"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="10dp"
                android:paddingTop="10dp">

                <ImageView
                    android:id="@+id/user_profile_image"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginEnd="@dimen/default_padding"
                    android:src="@drawable/ic_avatar_gray" />

                <TextView
                    android:id="@+id/user_profile_name"
                    style="@style/ItemSettingText"
                    tools:text="User name" />

                <ImageView
                    android:id="@+id/user_profile_message"
                    style="?attr/backgroundTheme"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginLeft="10dp"
                    android:background="@null"
                    android:padding="5dp"
                    android:src="@drawable/ic_message_border"
                    android:visibility="gone" />

                <ImageView
                    android:id="@+id/user_profile_voice"
                    style="?attr/backgroundTheme"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginLeft="10dp"
                    android:background="@null"
                    android:padding="5dp"
                    android:src="@drawable/ic_chat_audio"
                    android:visibility="gone" />

                <ImageView
                    android:id="@+id/user_profile_video"
                    style="?attr/backgroundTheme"
                    android:layout_width="40dp"
                    android:layout_height="30dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@null"
                    android:padding="5dp"
                    android:src="@drawable/ic_chat_video"
                    android:visibility="gone" />
            </LinearLayout>

            <View style="@style/ItemViewSeparate" />

            <com.ping.android.presentation.view.custom.SettingItem
                style="@style/ItemSetting"
                app:leftIcon="@drawable/ic_conversation_notification"
                app:leftIconTint="?colorAccent"
                app:title="@string/conversation_detail_notifications">

                <android.support.v7.widget.SwitchCompat
                    android:id="@+id/user_profile_notification"
                    style="@style/ItemSettingIconRight.Toggle" />
            </com.ping.android.presentation.view.custom.SettingItem>

            <com.ping.android.presentation.view.custom.SettingItem
                style="@style/ItemSetting"
                app:leftIcon="@drawable/ic_conversation_mask_message"
                app:leftIconTint="?colorAccent"
                app:title="@string/conversation_detail_mask_message">

                <android.support.v7.widget.SwitchCompat
                    android:id="@+id/user_profile_mask"
                    style="@style/ItemSettingIconRight.Toggle" />
            </com.ping.android.presentation.view.custom.SettingItem>

            <com.ping.android.presentation.view.custom.SettingItem
                style="@style/ItemSetting"
                app:leftIcon="@drawable/ic_conversation_mask_image"
                app:leftIconTint="?colorAccent"
                app:title="@string/conversation_detail_puzzule_image">

                <android.support.v7.widget.SwitchCompat
                    android:id="@+id/user_profile_puzzle"
                    style="@style/ItemSettingIconRight.Toggle" />
            </com.ping.android.presentation.view.custom.SettingItem>

            <com.ping.android.presentation.view.custom.SettingItem
                android:id="@+id/profile_nickname"
                style="@style/ItemSetting"
                android:layout_marginTop="30dp"
                app:leftIconTint="?colorAccent"
                app:leftIcon="@drawable/ic_conversation_nickname"
                app:title="@string/conversation_detail_nickname">

                <ImageView
                    style="@style/ItemSettingIconRight" />
            </com.ping.android.presentation.view.custom.SettingItem>

            <com.ping.android.presentation.view.custom.SettingItem
                android:id="@+id/group_profile_color"
                style="@style/ItemSetting"
                app:leftIconTint="?colorAccent"
                app:leftIcon="@drawable/ic_conversation_color_lens"
                app:title="@string/conversation_detail_colors">

                <ImageView
                    style="@style/ItemSettingIconRight" />
            </com.ping.android.presentation.view.custom.SettingItem>

            <com.ping.android.presentation.view.custom.SettingItem
                android:id="@+id/profile_background"
                style="@style/ItemSetting"
                app:leftIconTint="?colorAccent"
                app:leftIcon="@drawable/ic_conversation_background"
                app:title="@string/conversation_detail_background">

                <ImageView
                    style="@style/ItemSettingIconRight" />
            </com.ping.android.presentation.view.custom.SettingItem>

            <com.ping.android.presentation.view.custom.SettingItem
                android:id="@+id/profile_gallery"
                style="@style/ItemSetting"
                app:leftIconTint="?colorAccent"
                app:leftIcon="@drawable/ic_conversation_media"
                app:title="@string/conversation_detail_media">

                <ImageView
                    style="@style/ItemSettingIconRight" />
            </com.ping.android.presentation.view.custom.SettingItem>

            <com.ping.android.presentation.view.custom.SettingItem
                style="@style/ItemSetting"
                android:layout_marginTop="30dp"
                app:leftIcon="@drawable/ic_block"
                app:leftIconTint="?colorAccent"
                app:title="@string/conversation_detail_block">

                <android.support.v7.widget.SwitchCompat
                    android:id="@+id/user_profile_block"
                    style="@style/ItemSettingIconRight.Toggle" />

            </com.ping.android.presentation.view.custom.SettingItem>
        </LinearLayout>
    </ScrollView>

    <View style="@style/ViewSeparate" />

</LinearLayout>
