<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:id="@+id/contentRoot"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/main_background_gray"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <RelativeLayout style="@style/TopMenu">

            <ImageView
                android:id="@+id/iv_back"
                style="@style/BackButton" />

            <TextView
                style="@style/TextTitle"
                android:text="@string/privacy_terms" />

        </RelativeLayout>

        <View style="@style/ViewSeparate" />

        <LinearLayout
            style="@style/MatchWidth"
            android:layout_marginTop="50dp"
            android:background="@color/white"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingLeft="@dimen/default_padding">

            <com.ping.android.presentation.view.custom.SettingItem
                android:id="@+id/v_data_privacy"
                style="@style/ItemSetting"
                app:titleText="@string/data_privacy">

                <ImageView style="@style/ItemSettingIconRight" />
            </com.ping.android.presentation.view.custom.SettingItem>

            <com.ping.android.presentation.view.custom.SettingItem
                android:id="@+id/v_terms_of_service"
                style="@style/ItemSetting"
                app:showDivider="false"
                app:titleText="@string/terms_of_service">

                <ImageView style="@style/ItemSettingIconRight" />
            </com.ping.android.presentation.view.custom.SettingItem>

        </LinearLayout>

        <TextView
            android:id="@+id/tv_copyright"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="@color/text_color_grey"
            android:textSize="@dimen/text_size_small"
            tools:text="©2017 ver 1.0.0" />


    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>