<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout2"
    android:layout_width="match_parent"
    android:background="@color/black_bg"
    android:layout_height="wrap_content">

    <com.ping.android.presentation.view.custom.TopCropImageView
        android:id="@+id/topCropImageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/login_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:src="@drawable/ic_avatar_orange"
        android:transitionName="bzzz"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:text="dev01"
        android:id="@+id/login_name"
        style="@style/InputTextStyle"
        android:layout_width="match_parent"
        android:hint="@string/login_hint_username"
        android:inputType="textEmailAddress"
        android:drawableStart="@drawable/ic_login_email"
        app:layout_constraintBottom_toTopOf="@+id/login_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topCropImageView" />

    <EditText
        android:text="1234567890"
        android:id="@+id/login_password"
        style="@style/InputTextStyle"
        android:layout_width="match_parent"
        android:hint="@string/login_hint_password"
        android:drawableStart="@drawable/ic_login_password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/login_next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_name" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/login_next"
        style="@style/LoginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:layout_marginTop="30dp"
        android:text="@string/registration_login"
        android:backgroundTint="@color/orange"
        app:layout_constraintBottom_toTopOf="@+id/topCropImageView"
        app:layout_constraintTop_toBottomOf="@+id/login_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteX="38dp" />

    <TextView
        android:id="@+id/tv_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:background="@drawable/background_rectangle_border"
        android:paddingBottom="3dp"
        android:paddingEnd="20dp"
        android:paddingStart="20dp"
        android:paddingTop="0dp"
        android:text="@string/login_registration"
        android:textColor="@color/orange"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tv_forgot_password"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/topCropImageView" />

    <TextView
        android:id="@+id/tv_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginStart="20dp"
        android:background="@drawable/background_rectangle_border"
        android:paddingBottom="3dp"
        android:paddingEnd="15dp"
        android:paddingStart="15dp"
        android:paddingTop="0dp"
        android:text="@string/registration_forgot_password"
        android:textColor="@color/orange"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/topCropImageView"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tv_register" />

    <include
        layout="@layout/notify_network_other"
        android:visibility="gone" />
</androidx.constraintlayout.widget.ConstraintLayout>
